Added Lucky Block support

--- a/mod.conf
+++ b/mod.conf
@@ -1,5 +1,6 @@
 name = myschool
 description = What you need to build a school
 depends = 
+optional_depends = lucky_block
 author = Don
 title = My School
